SVN changes:

- bugfix: wrong font-color for mac-qt
- bugfix: raise after x hands
- add version number to title bar and about-dialog 
- bugfix: utf8-path
- bugfix: win98 winme crash
- change: smaller table-background-image (1mb)
- change: just link against libcrypt not whole libssl

2007-04-04 version 0.4:

- feature: settings menu (to do a lot of settings and save preferences)
- feature: set player names and avatars for computer opponents
- feature: switch to fullscreen mode
- feature: cards animation (show winning hand, flip cards)
- feature: set you own card-flipside picture 
- feature: log-window and log-files
- feature: start-stop button (for break between hands)
- feature: game-speed slider (for changing speed during game)
- feature: graphical handranking overview
- feature: keyboard shortcuts (e.g. for human player action)
- change: now you can play against up to 6 opponents
- change: complete new gui (gfx by tranberry)
- change: complete new engine design
- bugfix: a lot of bugfixes


2006-10-16 version 0.3:

- change: some changes on game-speed and game-rhythm. game-speed delay near 0 is possible ;)
- change: gui-language changed from german to english
- change: some ai-engine changes
- change: now POT-distribution works better (especially for multible All-In situation and split-pot)
- change: switched to Qt-4.2
- change: some GUI-changes (e.g. killed the "Next Round"-Button --> task #131930)
- bugfix: #1572742 - "bet-loop"
- tasks: new published tasks #131988, #131980, #131987, #131978, #131992, #132018


2006-10-04 version 0.2.1:

- bugfix: fix the Bug that causes freeze average all 52 rounds. It was a problem with random-number-generation


2006-10-04 version 0.2:

- first public release
- feature: now you can play preflop, flop, turn and river
- change: its nearly complete portet to qt4


2006-05-18 version 0.1:

- first release
- feature: you can play preflop and river